# pico-loongson-ejtag

./: .gitignore  CMakeLists.txt  README.en.md  README.md
.github/workflows/: build.yml
hardware/: .gitignore  lsejtag-rp2040zero.kicad_pcb  lsejtag-rp2040zero.kicad_pro  lsejtag-rp2040zero.kicad_sch
inc/: config.h  ejtag.h  shell_port.h  tusb_config.h  usb_descriptors.h
inc/lsejtag/: cmd_headers.h  cmdimpl.h  cmdop.h  config.h  lsejtag.h  lsejtag_impl.h
pio/: ejtag.pio  ws2812.pio
src/: ejtag_impl.c  main.c  shell_port.c
src/letter-shell/: shell.c
src/lsejtag/: cmdimpl.c  cmdop.c  lsejtag.c
src/shell-cmd/: pio_sm_status.c
src/usb/: cdc_callbacks.c  tinyusb_callbacks.c  usb_descriptors.c
